--- a/dot_config/catppuccin/oh-my-posh/catppuccin_macchiato.omp.yaml
+++ b/dot_config/catppuccin/oh-my-posh/catppuccin_macchiato.omp.yaml
@@ -18,7 +18,7 @@ blocks:
   segments:
   - options:
       debian: 
-      macos: 
+      display_distro_name: true
     background: p:blue
     foreground: p:text
     leading_diamond: 
