--- a/dot_config/catppuccin/oh-my-posh/catppuccin_macchiato.omp.yaml
+++ b/dot_config/catppuccin/oh-my-posh/catppuccin_macchiato.omp.yaml
@@ -1,127 +1,124 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/JanDeDobbeleer/oh-my-posh/main/themes/schema.json
 
 palette:
-    blue: '#8AADF4'
-    closer: '#ACB0BE'
-    green: '#a6da95'
-    lavender: '#B7BDF8'
-    mauve: '#c6a0f6'
-    pink: '#F5BDE6'
-    red: '#ed8796'
-    sapphire: '#7dc4e4'
-    sky: '#91d7e3'
-    text: '#1e2030'
-    yellow: '#eed49f'
+  blue: "#8AADF4"
+  closer: "#ACB0BE"
+  green: "#a6da95"
+  lavender: "#B7BDF8"
+  mauve: "#c6a0f6"
+  pink: "#F5BDE6"
+  red: "#ed8796"
+  sapphire: "#7dc4e4"
+  sky: "#91d7e3"
+  text: "#1e2030"
+  yellow: "#eed49f"
 blocks:
-    - type: prompt
-      alignment: left
-      segments:
-        - options:
-            debian: ' '
-            display_distro_name: true
-          leading_diamond: 
-          template: '{{.Icon}} '
-          foreground: p:text
-          powerline_symbol: 
-          background: p:blue
-          type: os
-          style: diamond
-        - template: ' {{ .UserName }}@{{ .HostName }} '
-          foreground: p:text
-          powerline_symbol: 
-          background: p:blue
-          type: session
-          style: diamond
-        - options:
-            folder_icon: .. ..
-            home_icon: "~"
-            style: agnoster_short
-          template: ' {{ .Path }}'
-          foreground: p:text
-          powerline_symbol: 
-          background: p:pink
-          type: path
-          style: powerline
-        - options:
-            branch_icon: "  "
-            cherry_pick_icon: "  "
-            commit_icon: "  "
-            fetch_status: false
-            fetch_upstream_icon: false
-            merge_icon: "  "
-            no_commits_icon: "󰜛  "
-            rebase_icon: "  "
-            revert_icon: "  "
-            tag_icon: "  "
-          template: ' {{ .HEAD }}'          
-          foreground: p:text
-          powerline_symbol: 
-          background: p:lavender
-          type: git
-          style: powerline
-    - type: prompt
-      alignment: right
-      overflow: hide
-      segments:
-        - options:
-            time_format: "15:04:05"
-          leading_diamond: 
-          foreground: p:text
-          background: p:sky
-          type: time
-          style: diamond
-        - options:
-            cache_duration: none
-          template: '  {{ .Full }} '
-          foreground: p:text
-          background: p:mauve
-          type: elixir
-          style: plain
-        - options:
-            cache_duration: none
-          template: '   {{ .Full }} '
-          foreground: p:text
-          background: p:sapphire
-          type: go
-          style: plain
-        - options:
-            cache_duration: none
-          template: ' 󰢱  {{ .Full }} '
-          foreground: p:text
-          background: p:blue
-          type: lua
-          style: plain
-        - options:
-            cache_duration: none
-          template: '   {{ .Full }} '
-          foreground: p:text
-          background: p:green
-          type: node
-          style: plain
-        - options:
-            cache_duration: none
-          template: '   {{ .Full }} '
-          foreground: p:text
-          background: p:yellow
-          type: python
-          style: plain
-        - options:
-            cache_duration: none
-          template: '   {{ .Full }} '
-          foreground: p:text
-          background: p:red
-          type: ruby
-          style: plain
-        - options:
-            http_timeout: 1000
-          cache:
-            duration: 5m0s
-            strategy: folder
-          template: ' {{ .IP }} '
-          foreground: p:text
-          powerline_symbol: 
-          background: p:lavender
-          type: ipify
-          style: diamond
+  - type: prompt
+    alignment: left
+    segments:
+      - options:
+          debian: " "
+          display_distro_name: true
+        leading_diamond: 
+        template: "{{.Icon}} "
+        foreground: p:text
+        background: p:blue
+        type: os
+        style: diamond
+      - template: " {{ .UserName }}@{{ .HostName }} "
+        foreground: p:text
+        background: p:blue
+        type: session
+        style: diamond
+      - options:
+          folder_icon: .. ..
+          home_icon: "~"
+          style: agnoster_short
+        template: " {{ .Path }}"
+        foreground: p:text
+        background: p:pink
+        type: path
+        style: powerline
+      - options:
+          branch_icon: "  "
+          cherry_pick_icon: "  "
+          commit_icon: "  "
+          fetch_status: false
+          fetch_upstream_icon: false
+          merge_icon: "  "
+          no_commits_icon: "󰜛  "
+          rebase_icon: "  "
+          revert_icon: "  "
+          tag_icon: "  "
+        template: "{{ .HEAD }}"
+        foreground: p:text
+        powerline_symbol: 
+        background: p:lavender
+        type: git
+        style: powerline
+  - type: prompt
+    alignment: right
+    overflow: hide
+    segments:
+      - options:
+          time_format: "15:04:05"
+        leading_diamond: 
+        foreground: p:text
+        background: p:sky
+        type: time
+        style: diamond
+      - options:
+          cache_duration: none
+        template: "  {{ .Full }} "
+        foreground: p:text
+        background: p:mauve
+        type: elixir
+        style: plain
+      - options:
+          cache_duration: none
+        template: "   {{ .Full }} "
+        foreground: p:text
+        background: p:sapphire
+        type: go
+        style: plain
+      - options:
+          cache_duration: none
+        template: " 󰢱  {{ .Full }} "
+        foreground: p:text
+        background: p:blue
+        type: lua
+        style: plain
+      - options:
+          cache_duration: none
+        template: "   {{ .Full }} "
+        foreground: p:text
+        background: p:green
+        type: node
+        style: plain
+      - options:
+          cache_duration: none
+        template: "   {{ .Full }} "
+        foreground: p:text
+        background: p:yellow
+        type: python
+        style: plain
+      - options:
+          cache_duration: none
+        template: "   {{ .Full }} "
+        foreground: p:text
+        background: p:red
+        type: ruby
+        style: plain
+      # - options:
+      #     http_timeout: 1000
+      #   cache:
+      #     duration: 5m0s
+      #     strategy: folder
+      #   template: " {{ .IP }} "
+      #   foreground: p:text
+      #   powerline_symbol: 
+      #   background: p:lavender
+      #   type: ipify
+      #   style: diamond
 version: 4
 final_space: true
