Remove username from catppuccin oh-my-posh config.

--- a/dot_config/catppuccin/oh-my-posh/catppuccin_macchiato.omp.yaml
+++ b/dot_config/catppuccin/oh-my-posh/catppuccin_macchiato.omp.yaml
@@ -25,7 +25,7 @@ blocks:
         background: p:blue
         type: os
         style: diamond
-      - template: " {{ .UserName }}@{{ .HostName }} "
+      - template: " {{ .HostName }} "
         foreground: p:text
         background: p:blue
         type: session
